# mulgore_backend

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: blizzard_api.rs  mod.rs  raider_io_api.rs
src/character/: character_data_from_blizzard.rs  character_data_rio.rs  character_media_blizzard.rs  mod.rs
src/talents/: best_talents_by_spec.rs  mod.rs
src/util/: mod.rs  query_params.rs
